<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/team_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/team_horizontal_margin"
                android:layout_marginRight="@dimen/team_horizontal_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/team_a"
                    android:textAppearance="@style/TeamTitles"/>

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/team_scores_vertical_margin"
                    android:layout_marginTop="@dimen/team_scores_vertical_margin"
                    tools:text="0"
                    android:textAppearance="@style/TeamScores"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addSixTeamA"
                    android:text="@string/touchdown"
                    android:textAppearance="@style/ButtonText"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addThreeTeamA"
                    android:text="@string/field_goal"
                    android:textAppearance="@style/ButtonText"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addTwoTeamA"
                    android:text="@string/conversion"
                    android:textAppearance="@style/ButtonText"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addOneTeamA"
                    android:text="@string/extra_point"
                    android:textAppearance="@style/ButtonText"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addTwoTeamA"
                    android:text="@string/safety"
                    android:textAppearance="@style/ButtonText"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="undoTeamA"
                    android:text="@string/undo"
                    android:textAppearance="@style/ButtonText"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/team_horizontal_margin"
                android:layout_marginRight="@dimen/team_horizontal_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/team_b"
                    android:textAppearance="@style/TeamTitles"/>

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/team_scores_vertical_margin"
                    android:layout_marginTop="@dimen/team_scores_vertical_margin"
                    tools:text="0"
                    android:textAppearance="@style/TeamScores"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addSixTeamB"
                    android:text="@string/touchdown"
                    android:textColor="@android:color/secondary_text_dark"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addThreeTeamB"
                    android:text="@string/field_goal"
                    android:textAppearance="@style/ButtonText"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addTwoTeamB"
                    android:text="@string/conversion"
                    android:textAppearance="@style/ButtonText"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addOneTeamB"
                    android:text="@string/extra_point"
                    android:textAppearance="@style/ButtonText"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addTwoTeamB"
                    android:text="@string/safety"
                    android:textAppearance="@style/ButtonText"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="undoTeamB"
                    android:text="@string/undo"
                    android:textAppearance="@style/ButtonText"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_buttons_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/reset_button_vertical_margin"
            android:layout_marginBottom="@dimen/reset_button_vertical_margin"
            android:onClick="reset"
            android:text="@string/reset"
            android:textAppearance="@style/ButtonText"/>

    </RelativeLayout>
</ScrollView>